[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
   "langchain>=1.2.7",
   "langchain-openai>=1.1.7",
   "langchain-community>=0.3.0",
   "chromadb>=0.5.0",
   "langgraph>=1.0.7",
   "langsmith>=0.6.6",
   "pydantic>=2.12.5",
   "python-dotenv>=1.2.1",
   "fastapi>=0.115.0",
   "uvicorn>=0.30.0",
   "httpx>=0.27.0",
   "mcp>=1.2.0",
   "langchain-ollama>=0.1.0",

]

[tool.setuptools.packages.find]
where = ["."]
include = ["chatbot*", "rag*", "mcp_weather*", "langgraph_debug*"]
exclude = ["langchain1*", "langflow-app*", "tests*"]

[tool.setuptools.package-data]
chatbot = ["static/*"]

[tool.uv.workspace]
members = [
    "langflow-app",
]
